version 0.61.1
22/10/2018
   - Updated spring and kustvakt-core versions (margaretha)
29/10/2018
   - Added rewrite handler post construct (margaretha)
07/11/2018
    - OpenJDK8u181-workaround (see Debian Bug report #911925; diewald)

version 0.61.0
30/08/2018
   - Fixed root packages & added api version properties in kustvakt-lite.conf (margaretha)
   - Added API versioning tests (margaretha)

version 0.60.2
05/07/2018
    - Added support for unrestricted corpus statistics (ndiewald)
    - Do not pass broken queries to Krill (diewald)
27/08/2018
    - Added vc reference test (margaretha)
28/08/2018
   - Added API URL versioning (margaretha)

version 0.60.1
12/06/2018
    - removed kustvakt_encryption (margaretha)
    - updated kustvakt core version (margaretha)
    - adopted statistics query parameter from full (ndiewald)
  
version 0.60
23/03/2018  
    - updated field type:date in the metadata test (margaretha)
    - removed loading application context via BeanFactory (margaretha)
    - fixed missing kustvakt-lite.conf (margaretha)
    - added support for highlights in matchinfo (diewald)

version 0.59.9 
01/02/2018
    - renamed light to lite (margaretha)
    - added Changes file (margaretha)
    - updated library versions and java environment (margaretha)
    - added metadata test (diewald)
  
version 0.59.8 
17/01/2018 
    - restructured Kustvakt and created /lite project
    - removed version from service paths (margaretha)
    - updated query serialization tests (margaretha)
    - added statistic service test (margaretha)
    - updated KustvaktResponseHandler (margaretha)
    - removed FastJerseyLight and simplified Jersey test configuration (margaretha)